tests/baselines/reference/overloadOnConstInObjectLiteralImplementingAnInterface(strict=true).errors.txt
overloadOnConstInObjectLiteralImplementingAnInterface.ts(2,5): error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.


==== overloadOnConstInObjectLiteralImplementingAnInterface.ts (1 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    var i2: I = { x1: (a: number, cb: (x: 'hi') => number) => { } }; // error